# fast-api-book

./: 4-2.py  README.md  dullness.py  hello.py  jsonable_encoder.py  main.py  pyproject.toml
.devcontainer/: devcontainer.json
case-study/src/: main.py
case-study/src/fake/: creature.py
case-study/src/service/: creature.py  explorer.py
case-study/src/test/unit/service/: test_creature.py
case-study/src/web/: explorer.py
random-examples/: 4-5.py  data.py  model.py  shy-endpoint.py  stuff.py  try-pydantic.py  using-dataclasses.py
src/data/: creature.py  explorer.py  init.py
src/service/: creature.py  explorer.py
src/test/unit/service/: test_creature.py
src/web/: creature.py  explorer.py
web/: tag.py
