[project]
name = "fast-api-book"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115.12",
  "httpie>=3.2.4",
  "mypy>=1.15.0",
  "pydantic>=2.11.3",
  "requests>=2.32.3",
  "uvicorn>=0.34.2",
]

[dependency-groups]
dev = ["pytest>=8.3.5"]

[tool.pytest.ini_options]
testpaths = ["case-study/srccase-study/src//test"]
python_files = "test_*.py"
python_functions = "test_*"
